--- a/sample/webbrowser/index.html
+++ b/sample/webbrowser/index.html
@@ -16,7 +16,7 @@
     <ul id="chat"></ul>
     <div id="footer">
       <hr>
-      <a href="https://github.com/carter2099/ws-client">https://github.com/carter2099/ws-client</a>
+      <a href="https://github.com/carter2099/ws_lite">https://github.com/carter2099/ws_lite</a>
     </div>
   </body>
 </html>
